<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.UserRegisterActivity"
        android:background="@color/darkBrown">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:textAlignment="center" />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="88dp"
            android:layout_marginBottom="88dp"
            app:cardBackgroundColor="@color/lightBrown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp">

            <TextView
                    android:id="@+id/tv_reg_fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_fill_registration_fields"
                    android:layout_centerHorizontal="true"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto" />

            <EditText
                    android:id="@+id/et_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.EditText"
                    android:paddingVertical="16dp"
                    android:hint="@string/full_name"
                    android:textSize="20sp"
                    android:drawableStart="@drawable/person_svgrepo_com"
                    android:drawablePadding="6dp"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="textEmailAddress"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="32dp"
                    android:layout_below="@id/tv_reg_fill"
                    android:fontFamily="@font/roboto" />

            <EditText
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.EditText"
                    android:paddingVertical="16dp"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/mail_svgrepo_com"
                    android:drawablePadding="6dp"
                    android:layout_below="@id/et_register_name"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto" />

            <EditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:hint="@string/password"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/password_lock_solid_svgrepo_com"
                    android:drawablePadding="6dp"
                    android:layout_marginTop="24dp"
                    android:inputType="textPassword"
                    android:layout_below="@id/et_register_email"
                    android:fontFamily="@font/roboto" />

            <EditText
                    android:id="@+id/et_register_confPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:hint="@string/confirm_password"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/rounded_edittext"
                    android:drawableStart="@drawable/password_lock_solid_svgrepo_com"
                    android:drawablePadding="6dp"
                    android:layout_marginTop="24dp"
                    android:inputType="textPassword"
                    android:layout_below="@id/et_register_password"
                    android:fontFamily="@font/roboto" />

            <Button
                    android:id="@+id/btn_register_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.FloatingActionButton.Surface"
                    android:text="@string/submit"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:layout_marginBottom="32dp"
                    android:paddingHorizontal="36dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/roboto_light" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>