<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.UserLoginActivity"
        android:background="@drawable/bg_waves_light">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="88dp"
            android:layout_marginBottom="88dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/light_blue"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp">

            <TextView
                    android:id="@+id/tv_fill_fields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_authorization_fields"
                    android:layout_centerHorizontal="true"
                    android:textSize="28sp"
                    android:layout_marginHorizontal="36dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto" />

            <EditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.EditText"
                    android:paddingVertical="16dp"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress"
                    android:layout_centerVertical="true"
                    android:layout_below="@id/tv_fill_fields"
                    android:layout_marginTop="64dp"
                    android:fontFamily="@font/roboto"/>

            <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:hint="@string/password"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                    android:layout_centerVertical="true"
                    android:layout_below="@id/et_login_email"
                    android:layout_marginTop="64dp"
                    android:fontFamily="@font/roboto"/>

            <Button
                    android:id="@+id/btn_login_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.FloatingActionButton.Surface"
                    android:text="@string/submit"
                    android:textSize="24sp"
                    android:textColor="@color/light_blue"
                    android:backgroundTint="#98c1d9"
                    android:layout_marginBottom="32dp"
                    android:paddingHorizontal="24dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="112dp"
                    android:fontFamily="@font/roboto_light"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>