<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_waves_light"
        tools:context=".activities.PhoneVerificationActivity"
        android:fontFamily="@font/roboto">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="36sp"
            android:layout_marginTop="36dp"
            android:textAlignment="center" />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="180dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/light_blue"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            >


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                >

            <TextView
                    android:id="@+id/card_tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="24sp"
                    android:layout_marginHorizontal="36dp"
                    android:layout_marginTop="16dp" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="92dp"
                    android:paddingVertical="16dp"
                    android:hint="@string/here"
                    android:inputType="number"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.FloatingActionButton.Surface"
                    android:text="SUBMIT"
                    android:textSize="24sp"
                    android:textColor="@color/light_blue"
                    android:backgroundTint="#98c1d9"
                    android:layout_marginTop="216dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginHorizontal="112dp"
                   />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>