<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B0E0E6"
        tools:context=".activities.MainPageActivity">


    <LinearLayout
            android:id="@+id/main_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/blueBeau"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:orientation="horizontal">

        <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/user_avatar"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:roundPercent="1"
                app:srcCompat="@drawable/img" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp">

            <TextView
                    android:id="@+id/address_template"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/where_to_deliver"
                    android:textColor="@color/dimGray"
                    android:textSize="24sp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/roboto"
                    android:orientation="horizontal" />

            <TextView
                    android:id="@+id/users_address"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="user's address here"
                    android:layout_centerInParent="true"
                    android:textSize="22sp"
                    android:fontFamily="@font/roboto" />
        </RelativeLayout>
    </LinearLayout>


    <!--    <GridLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="214dp"-->
    <!--            android:background="#008000"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/main_header"-->
    <!--            app:layout_constraintStart_toStartOf="parent">-->

    <!--        <androidx.cardview.widget.CardView-->
    <!--                android:id="@+id/cv_restaurants"-->
    <!--                android:layout_width="140dp"-->
    <!--                android:layout_height="150dp"-->
    <!--                app:cardCornerRadius="12dp"-->
    <!--                android:layout_row="0"-->
    <!--                android:layout_column="0"-->
    <!--                android:elevation="10dp"-->
    <!--                app:layout_constraintStart_toStartOf="parent"-->
    <!--                android:layout_marginTop="24dp"-->
    <!--                android:layout_marginStart="16dp">-->

    <!--            <LinearLayout-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="match_parent"-->
    <!--                    android:layout_gravity="center_vertical|center_horizontal"-->
    <!--                    android:gravity="center"-->
    <!--                    android:orientation="vertical">-->

    <!--                <ImageView-->
    <!--                        android:id="@+id/roundedImageView"-->
    <!--                        android:layout_width="match_parent"-->
    <!--                        android:layout_height="match_parent"-->
    <!--                        android:src="@drawable/restaurants"-->
    <!--                        android:background="@color/white"-->
    <!--                        android:contentDescription="@string/restaurants"-->
    <!--                        android:scaleType="centerCrop" />-->

    <!--            </LinearLayout>-->

    <!--        </androidx.cardview.widget.CardView>-->

    <!--        <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:text="@string/restaurants"-->
    <!--                android:layout_row="1"-->
    <!--                android:layout_column="0" />-->


    <!--    </GridLayout>-->


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="237dp"
            app:layout_constraintTop_toBottomOf="@id/main_header"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
                android:id="@+id/cv_restaurants"
                android:layout_width="140dp"
                android:layout_height="160dp"
                app:cardCornerRadius="12dp"
                android:elevation="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp">

            <ImageView
                    android:id="@+id/roundedImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/restaurants"
                    android:background="@color/white"
                    android:contentDescription="@string/restaurants"
                    android:scaleType="centerCrop" />


        </androidx.cardview.widget.CardView>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurants"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_bold"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="26dp"
                android:layout_marginStart="36dp" />

        <androidx.cardview.widget.CardView
                android:id="@+id/cv_groceries"
                android:layout_width="160dp"
                android:layout_height="75dp"
                app:cardCornerRadius="12dp"
                android:elevation="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp">

            <ImageView
                    android:id="@+id/iv_groceries"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/groceries"
                    android:background="@color/white"
                    android:contentDescription="@string/restaurants"
                    android:scaleType="centerCrop" />


        </androidx.cardview.widget.CardView>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groceries"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="48dp"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_bold" />

        <androidx.cardview.widget.CardView
                android:id="@+id/cv_medicines"
                android:layout_width="160dp"
                android:layout_height="75dp"
                app:cardCornerRadius="12dp"
                android:elevation="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="16dp">

            <ImageView
                    android:id="@+id/iv_medicines"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/medicines"
                    android:background="@color/white"
                    android:contentDescription="@string/restaurants"
                    android:scaleType="centerCrop" />


        </androidx.cardview.widget.CardView>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicines"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="48dp"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>